--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
    <h3>Devops</h3>
    <h4>An HTML Playground</h4>
    <h5>An HTML Playground</h5>
-   <h6>A HTML Playground</h6>
+   <h6> HTML Playground</h6>
 </body>
