--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
    <h2>Hello</h2>
    <h3>Devops</h3>
    <h4>An HTML Playground</h4>
-   <h5>An HTML Playground</h5>
+   <h5>An HTML layground</h5>
    <h6>HTML Playground</h6>
 </body>
